// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Program Info Section renders logo when present in props 1`] = `
.c0 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
  -webkit-column-gap: 1rem;
  column-gap: 1rem;
  margin-top: 9rem;
  border-top: 55px solid transparent;
  position: relative;
  -webkit-background-clip: padding-box;
  -moz-background-clip: padding;
  background-clip: padding-box;
}

.c1 {
  grid-column: 1 / span 12;
  background-color: #303641;
}

<section
  className="c0"
  data-cy="program-info-section"
  id="program-info"
>
  <div
    style={
      Object {
        "alignSelf": "end",
        "gridColumn": "1 / span 7",
      }
    }
  >
    <a
      href="#program-info"
    >
      <h2>
        Program Info
      </h2>
    </a>
  </div>
  <div
    className="c1"
  >
    <div
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flex": "0.618",
            "justifyContent": "center",
            "padding": "1rem",
          }
        }
      >
        <div
          data-cy="campaign-logo"
          style={
            Object {
              "width": "100%",
            }
          }
        >
          <img
            alt="logo"
            fluid={
              Object {
                "aspectRatio": 1.014388489208633,
                "base64": "data:image/png;base64,iVBOR",
                "originalImg": "/static/070840eb6299020cd65fd46e27c54400/29ce4/aces_logo.png",
                "originalName": "aces_logo.png",
                "presentationHeight": 139,
                "presentationWidth": 141,
                "sizes": "(max-width: 141px) 100vw, 141px",
                "src": "/static/070840eb6299020cd65fd46e27c54400/29ce4/aces_logo.png",
                "srcSet": "/static/070840eb6299020cd65fd46e27c54400/29ce4/aces_logo.png 141w",
                "srcSetWebp": "/static/070840eb6299020cd65fd46e27c54400/36436/aces_logo.webp 141w",
                "srcWebp": "/static/070840eb6299020cd65fd46e27c54400/36436/aces_logo.webp",
                "tracedSVG": "data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'",
              }
            }
            src="test-image.png"
          />
        </div>
      </div>
      <div
        style={
          Object {
            "display": "grid",
            "flex": "2.618",
            "gap": "1.5rem",
            "gridTemplateColumns": "minmax(0,1fr) minmax(0,1fr) minmax(0,1fr)",
            "padding": "2rem",
          }
        }
      >
        <div
          data-cy="program-info-content"
        >
          <label
            data-cy="program-info-content-label"
            style={
              Object {
                "borderBottom": "1px solid #9E9E9E",
                "color": "#9E9E9E",
                "display": "block",
              }
            }
          >
            Funding Agency
          </label>
          <p
            data-cy="program-info-content-text"
          >
            test string
          </p>
        </div>
        <div
          data-cy="program-info-content"
        >
          <label
            data-cy="program-info-content-label"
            style={
              Object {
                "borderBottom": "1px solid #9E9E9E",
                "color": "#9E9E9E",
                "display": "block",
              }
            }
          >
            Funding Program
          </label>
          <p
            data-cy="program-info-content-text"
          >
            test string
          </p>
        </div>
        <div
          data-cy="program-info-content"
        >
          <label
            data-cy="program-info-content-label"
            style={
              Object {
                "borderBottom": "1px solid #9E9E9E",
                "color": "#9E9E9E",
                "display": "block",
              }
            }
          >
            Funding Program Lead
          </label>
          <p
            data-cy="program-info-content-text"
          >
            test string
          </p>
        </div>
        <div
          data-cy="program-info-content"
        >
          <label
            data-cy="program-info-content-label"
            style={
              Object {
                "borderBottom": "1px solid #9E9E9E",
                "color": "#9E9E9E",
                "display": "block",
              }
            }
          >
            Principle Investigator(s)
          </label>
          <p
            data-cy="program-info-content-text"
          >
            test string
          </p>
        </div>
        <div
          data-cy="program-info-content"
        >
          <label
            data-cy="program-info-content-label"
            style={
              Object {
                "borderBottom": "1px solid #9E9E9E",
                "color": "#9E9E9E",
                "display": "block",
              }
            }
          >
            Data Manager / Technical Contact
          </label>
          <p
            data-cy="program-info-content-text"
          >
            test string
          </p>
        </div>
        <div
          data-cy="program-info-content"
        >
          <label
            data-cy="program-info-content-label"
            style={
              Object {
                "borderBottom": "1px solid #9E9E9E",
                "color": "#9E9E9E",
                "display": "block",
              }
            }
          >
            NASA Data Repository
          </label>
          <a
            data-cy="program-info-content-link"
            href="https://www.test-campaign.io"
            rel="noopener noreferrer"
            style={
              Object {
                "color": "#aac9ff",
              }
            }
            target="_blank"
          >
            https://www.test-campaign.io
          </a>
        </div>
        <div
          data-cy="program-info-content"
        >
          <label
            data-cy="program-info-content-label"
            style={
              Object {
                "borderBottom": "1px solid #9E9E9E",
                "color": "#9E9E9E",
                "display": "block",
              }
            }
          >
            Partner Organizations
          </label>
          <p
            data-cy="program-info-content-text"
          >
            test string
          </p>
        </div>
        <div
          data-cy="program-info-content"
        >
          <label
            data-cy="program-info-content-label"
            style={
              Object {
                "borderBottom": "1px solid #9E9E9E",
                "color": "#9E9E9E",
                "display": "block",
              }
            }
          >
            Publication Overview
          </label>
          <a
            data-cy="program-info-content-link"
            href="https://www.test-campaign.io"
            rel="noopener noreferrer"
            style={
              Object {
                "color": "#aac9ff",
              }
            }
            target="_blank"
          >
            https://www.test-campaign.io
          </a>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`Program Info Section renders placeholder when no logo is available 1`] = `
.c0 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
  -webkit-column-gap: 1rem;
  column-gap: 1rem;
  margin-top: 9rem;
  border-top: 55px solid transparent;
  position: relative;
  -webkit-background-clip: padding-box;
  -moz-background-clip: padding;
  background-clip: padding-box;
}

.c1 {
  grid-column: 1 / span 12;
  background-color: #303641;
}

<section
  className="c0"
  data-cy="program-info-section"
  id="program-info"
>
  <div
    style={
      Object {
        "alignSelf": "end",
        "gridColumn": "1 / span 7",
      }
    }
  >
    <a
      href="#program-info"
    >
      <h2>
        Program Info
      </h2>
    </a>
  </div>
  <div
    className="c1"
  >
    <div
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flex": "0.618",
            "justifyContent": "center",
            "padding": "1rem",
          }
        }
      >
        <img
          alt="placeholder-logo"
          data-cy="campaign-logo"
          src="test-file-stub"
        />
      </div>
      <div
        style={
          Object {
            "display": "grid",
            "flex": "2.618",
            "gap": "1.5rem",
            "gridTemplateColumns": "minmax(0,1fr) minmax(0,1fr) minmax(0,1fr)",
            "padding": "2rem",
          }
        }
      >
        <div
          data-cy="program-info-content"
        >
          <label
            data-cy="program-info-content-label"
            style={
              Object {
                "borderBottom": "1px solid #9E9E9E",
                "color": "#9E9E9E",
                "display": "block",
              }
            }
          >
            Funding Agency
          </label>
          <p
            data-cy="program-info-content-text"
          >
            test string
          </p>
        </div>
        <div
          data-cy="program-info-content"
        >
          <label
            data-cy="program-info-content-label"
            style={
              Object {
                "borderBottom": "1px solid #9E9E9E",
                "color": "#9E9E9E",
                "display": "block",
              }
            }
          >
            Funding Program
          </label>
          <p
            data-cy="program-info-content-text"
          >
            test string
          </p>
        </div>
        <div
          data-cy="program-info-content"
        >
          <label
            data-cy="program-info-content-label"
            style={
              Object {
                "borderBottom": "1px solid #9E9E9E",
                "color": "#9E9E9E",
                "display": "block",
              }
            }
          >
            Funding Program Lead
          </label>
          <p
            data-cy="program-info-content-text"
          >
            test string
          </p>
        </div>
        <div
          data-cy="program-info-content"
        >
          <label
            data-cy="program-info-content-label"
            style={
              Object {
                "borderBottom": "1px solid #9E9E9E",
                "color": "#9E9E9E",
                "display": "block",
              }
            }
          >
            Principle Investigator(s)
          </label>
          <p
            data-cy="program-info-content-text"
          >
            test string
          </p>
        </div>
        <div
          data-cy="program-info-content"
        >
          <label
            data-cy="program-info-content-label"
            style={
              Object {
                "borderBottom": "1px solid #9E9E9E",
                "color": "#9E9E9E",
                "display": "block",
              }
            }
          >
            Data Manager / Technical Contact
          </label>
          <p
            data-cy="program-info-content-text"
          >
            test string
          </p>
        </div>
        <div
          data-cy="program-info-content"
        >
          <label
            data-cy="program-info-content-label"
            style={
              Object {
                "borderBottom": "1px solid #9E9E9E",
                "color": "#9E9E9E",
                "display": "block",
              }
            }
          >
            NASA Data Repository
          </label>
          <a
            data-cy="program-info-content-link"
            href="https://www.test-campaign.io"
            rel="noopener noreferrer"
            style={
              Object {
                "color": "#aac9ff",
              }
            }
            target="_blank"
          >
            https://www.test-campaign.io
          </a>
        </div>
        <div
          data-cy="program-info-content"
        >
          <label
            data-cy="program-info-content-label"
            style={
              Object {
                "borderBottom": "1px solid #9E9E9E",
                "color": "#9E9E9E",
                "display": "block",
              }
            }
          >
            Partner Organizations
          </label>
          <p
            data-cy="program-info-content-text"
          >
            test string
          </p>
        </div>
        <div
          data-cy="program-info-content"
        >
          <label
            data-cy="program-info-content-label"
            style={
              Object {
                "borderBottom": "1px solid #9E9E9E",
                "color": "#9E9E9E",
                "display": "block",
              }
            }
          >
            Publication Overview
          </label>
          <a
            data-cy="program-info-content-link"
            href="https://www.test-campaign.io"
            rel="noopener noreferrer"
            style={
              Object {
                "color": "#aac9ff",
              }
            }
            target="_blank"
          >
            https://www.test-campaign.io
          </a>
        </div>
      </div>
    </div>
  </div>
</section>
`;
